Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62390

[Qt3D] 5.9.1 -> 5.9.2 regression: multiple SceneLoader issue

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.2
    • 5.9.2
    • Qt3D
    • None
    • ff08f80aca53eafecb6ad89c60f5b3b7fdca1c07

    Description

      Me again, sorry. Example attached.

      With 5.9.1 I can see both meshes. With the current sources I can see only the last mesh loaded.

      It happens with the same mesh source file and with different source files as well.

      Any clue ?

      Attachments

        For Gerrit Dashboard: QTBUG-62390
        # Subject Branch Project Status CR V

        Activity

          People

            mauro.persano Mauro Persano
            mcallegari79 Massimo Callegari
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes